# secrets-proxy

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
docker/: entrypoint.sh  test_escape.py
scripts/: secrets-proxy-run.sh
sprites/: secrets-proxy-run.sh  test_escape.py
src/secrets_proxy/: __init__.py  __main__.py  addon.py  addon_entry.py  ca_trust.py  cli.py  config.py  launcher.py
tests/: conftest.py  test_addon_behavior.py  test_addon_entry.py  test_addon_security_fixes.py  test_config_validation.py  test_e2e_script.py  test_host_matching.py  test_launcher_hardening.py  test_launcher_security.py  test_response_scrubbing.py  test_secrets.json
